<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rect_calculations_label"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/rectangle_height_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height"
            android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/rectangle_width_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/width"
            android:inputType="numberDecimal"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/area"/>

            <TextView
                android:id="@+id/rectangle_area_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/perimeter"/>

            <TextView
                android:id="@+id/rectangle_perimeter_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/diagonal"/>

            <TextView
                android:id="@+id/rectangle_diagonal_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp" />
        </LinearLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rect_solid_calculations_label"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/rectangle_solid_height_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height"
            android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/rectangle_solid_width_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/width"
            android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/rectangle_solid_length_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/length"
            android:inputType="numberDecimal"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/volume"/>

            <TextView
                android:id="@+id/rectangle_solid_volume_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/surface_area"/>

            <TextView
                android:id="@+id/rectangle_solid_surface_area_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"/>
        </LinearLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/triangle_calculations_label"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/triangle_a_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/triangle_a"
            android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/triangle_b_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/triangle_b"
            android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/triangle_c_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/triangle_c"
            android:inputType="numberDecimal"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/perimeter"/>

            <TextView
                android:id="@+id/triangle_perimiter_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/volume"/>

            <TextView
                android:id="@+id/triangle_area_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
